--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "kudryavtsevsr",
   "dependencies": {
     "axios": "^0.16.2",
-    "bootstrap": "^3.3.7",
+    "bootstrap-css-only": "^3.3.7",
     "firebase": "^4.3.0",
     "qs": "^6.5.0",
     "vue": "^2.4.2",
