--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open --inline",
-    "build": "webpack --progress"
+    "build": "webpack --progress",
+    "install": "napa"
   },
   "author": "kudryavtsevsr",
+  "napa": {
+    "ergonomic.detect_flex": "ergcode/ergonomic.detect_flex"
+  },
   "dependencies": {
     "OnlineJS": "git+https://github.com/PixelsCommander/OnlineJS.git",
     "axios": "^0.16.2",
@@ -25,6 +29,7 @@
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.5",
     "file-loader": "^0.11.2",
+    "napa": "^3.0.0",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
